adicionando Footer e NavBar

--- a/frontend/src/assets/css/styles.css
+++ b/frontend/src/assets/css/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&family=Zen+Antique&display=swap');
 :root {
-    --color-primary: #088CEB;
+    --color-primary: #000000;
 }
 
 html, body {
